<?xml version="1.0"?>
<package format="3">
  <name>humanoid_nav_msgs</name>
  <version>0.3.0</version>
  <description>
    Messages and services for humanoid robot navigation
  </description>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/humanoid_nav_msgs</url>
  <url type="bugtracker">https://github.com/ahornung/humanoid_msgs/issues</url>
  <url type="repository">https://github.com/ahornung/humanoid_msgs</url>
  <author>Armin Hornung</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
